--- a/_assets/stylesheets/light.scss
+++ b/_assets/stylesheets/light.scss
@@ -63,7 +63,7 @@ $article-paginator-color-hover: $gray-darkest;
 
 @import "layouts/footer";
 @import "layouts/grid";
-@import "../scss/style";
+// @import "../scss/style";
 
 // Modules
 
