--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
-<footer class="footer reveal">
-  <p>
-    Chalk is a high quality, completely customisable, performant and 100% free
-    blog template for Jekyll built by
-    <a href="{{ site.baseurl }}about" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" target="_blank" title="Download Chalk">here</a>.
-  </p>
+<footer>
+  <img src="img/logo.gif">
+  <br>
+  <a href="https://twitter.com/xnslrzn" target="_blank">@xnslrzn</a> •
+  <a href="mailto:cs@christiansolorzano.com?Subject=Hello%20again" target="_top">cs@christiansolorzano.com</a>
 </footer>
