--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,14 @@
 {% include head.html %}
 <body>
 {% include navigation.html %}
-    <div id="about">
+<main role="main">
+    <div class="grid grid-centered">
       <div class="grid-cell">
         {{ content }}
 
       </div>
     </div>
+</main>
   {% include javascripts.html %}
 {% include footer.html %}
 </body>
