--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -670,8 +670,8 @@ h2 {
 
 /* BLOG */
 
-.grid-centered {
-  @include outer-container(70%);
+.grid-centered, {
+  @include outer-container(45%);
   @include media($small) { // As defined in _grid-settings.scss
     @include outer-container(80%);
   }
@@ -691,12 +691,28 @@ h2 {
   position: relative;
   display: block;
   padding: 1.25em 0;
+
+}
+
+.article-list li h1  {
+  font-size:ms(5);
+  color:$maincolor;
+
+}
+
+.article-list {
+  margin:2.5em 0;
 }
 
 .article-list-item a {
   text-decoration: none;
 }
 
+
+.article {
+  margin:2.5em 0;
+
+}
 
 
 .title {
@@ -708,3 +724,18 @@ h2 {
   margin: .5em 0 .5em;
   font-size: ms(0);
 }
+
+.article-header {
+  padding:0;
+
+}
+
+.article-header h1 {
+  font-size:ms(3);
+  color:$maincolor;
+}
+
+.article-header p {
+  margin:.25em;
+}
+
