--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,13 @@
 <html lang="en">
 {% include head.html %}
 <body>
+{% include navigation.html %}
+
   <main role="main">
     <div class="grid grid-centered">
       <div class="grid-cell">
-        {% include navigation.html %}
         <article class="article reveal">
-          <header class="article-header">
+          <span class="article-header">
             <h1>{{ page.title }}</h1>
             <p>{{ page.description }}</p>
             <div class="article-list-footer">
@@ -30,7 +31,7 @@
                 {% endfor %}
               </div>
             </div>
-          </header>
+          </span>
 
           <div class="article-content">
             {{ content }}
