--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -690,18 +690,25 @@ h2 {
 .article-list li {
   position: relative;
   display: block;
-  padding: 1.25em 0;
+  padding: 0;
+  margin-bottom: 1.25em;
+  border-bottom: .5px solid $darkcolor;
 
 }
 
 .article-list li h1  {
-  font-size:ms(5);
+  @include ms-respond(font-size, 2);
   color:$maincolor;
 
 }
 
+.article-list-footer {
+  display: block;
+  margin-bottom: 1.25em;
+}
+
 .article-list {
-  margin:2.5em 0;
+  margin:1em 0;
 }
 
 .article-list-item a {
@@ -731,7 +738,7 @@ h2 {
 }
 
 .article-header h1 {
-  font-size:ms(3);
+  font-size:ms(5);
   color:$maincolor;
 }
 
