footer copy edited

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
-  <br>
-  <a href="https://twitter.com/xnslrzn" target="_blank">@xnslrzn</a> •
-  <a href="mailto:cs@christiansolorzano.com?Subject=Hello%20again" target="_top">cs@christiansolorzano.com</a>
+  <hr>
+
+  <p style="color:lightgrey">Christian Solorzano 2016<br>No animals were harmed in the making of this website.</p>
+
 </footer>
