--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -1,7 +1,7 @@
 /* =============== IMPORTS =============== */
 
-@import "../libraries/bourbon/bourbon";
-@import "../libraries/neat/neat";
+@import "../bourbon/bourbon";
+@import "../neat/neat";
 @import "../modular-scale/modular-scale";
 
 // ------------------------------------------------------------
