--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,13 @@
-
-
 <header>
   <div id="logo">
-    <a href="index.html">Christian Solorzano</a>
-
+    <a href="{{ '/' | relative_url }}" div="logo" title="{{ site.name }}">{{ site.name }}</a>
   </div>
   <nav>
     <ul>
-      <li><a href="about.html">about</a></li>
+      <li><a href="http://christiansolorzano.com/about.html">about</a></li>
       <li><a href="index.html#work">work</a></li>
-      <li><a href="http://xnslrzn.tumblr.com/" target="_blank">experiments</a></li>
-      <li><a href="http://christiansolorzano.com/blog/">thoughts</a></li>
+      <li><a href="http://xnslrzn.tumblr.com/" target="_blank">play</a></li>
+      <li><a href="http://christiansolorzano.com/blog/">journal</a></li>
     </ul>
   </nav>
 </header>
