--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
         <article class="article reveal">
           <span class="article-header">
             <h1>{{ page.title }}</h1>
-            <p>{{ page.description }}</p>
+           <!-- <p>{{ page.description }}</p> -->
             <div class="article-list-footer">
               <span class="article-list-date">
                 {{ page.date | date: "%B %-d, %Y" }}
@@ -24,7 +24,6 @@
                   {{ words | plus: 250 | divided_by: 250 | append: " minute read" }}
                 {% endunless %}
               </span>
-              <span class="article-list-divider">-</span>
               <div class="article-list-tags">
                 {% for tag in page.tags %}
                 <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
@@ -37,16 +36,7 @@
             {{ content }}
           </div>
 
-          <div class="article-share">
-            {% assign page_title = page.title  | truncate '110' %}
-             <a href="" title="Share on Twitter" onclick="window.open('https://twitter.com/home?status={{ page_title }} - {{ page.url | absolute_url }} {% if site.social.twitter %}by @{{ site.social.twitter }}{% endif %}', 'newwindow', 'width=500, height=225'); return false;">
-              <span class="icon icon-social-twitter"></span>
-            </a>
-            <a href="" title="Share on Facebook" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}', 'newwindow', 'width=500, height=500'); return false;">
-              <span class="icon icon-social-facebook"></span>
-            </a>
 
-          </div>
 
           {% if site.discus_identifier %}
             <div id="disqus_thread" class="article-comments"></div>
@@ -61,10 +51,10 @@
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
           {% endif %}
         </article>
-        {% include footer.html %}
       </div>
     </div>
   </main>
+{% include footer.html %}
   {% include javascripts.html %}
 </body>
 </html>
