--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,10 +4,9 @@
   </div>
   <nav>
     <ul>
-      <li><a href="http://christiansolorzano.com/about.html">about</a></li>
-      <li><a href="index.html#work">work</a></li>
-      <li><a href="http://xnslrzn.tumblr.com/" target="_blank">play</a></li>
-      <li><a href="http://christiansolorzano.com/blog/">journal</a></li>
+      <li>
+      <a href="{{ 'journal' | relative_url }}" title="journal">journal</a>
+      </li>
     </ul>
   </nav>
 </header>
