--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,8 +5,12 @@
   <nav>
     <ul>
       <li>
-      <a href="{{ 'journal' | relative_url }}" title="journal">journal</a>
+      <a href="{{ '/' | relative_url }}"#work>graphic design</a>
+    </li>
+      <li>
+      <a href="{{ 'posts' | relative_url }}" title="journal">journal</a>
       </li>
+
     </ul>
   </nav>
 </header>
