--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,13 @@
 <body>
 {% include navigation.html %}
 <main role="main">
+    <div class="grid grid-centered">
+        <div class="grid-cell">
 
         {{ content }}
 
-
+</div>
+        </div>
 </main>
   {% include javascripts.html %}
 {% include footer.html %}
