--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,9 @@
   <nav>
     <ul>
       <li>
+        <a href="{{ '/about' | relative_url }}"#work>about</a>
+      </li>
+      <li>
       <a href="{{ '/' | relative_url }}"#work>graphic design</a>
     </li>
       <li>
