removed styling for heads

--- a/_assets/stylesheets/modules/_articles.scss
+++ b/_assets/stylesheets/modules/_articles.scss
@@ -141,7 +141,7 @@
   }
 }
 
-.article-content {
+/* .article-content {
   display: block;
   p,
   ul,
@@ -164,6 +164,7 @@
   }
 }
 
+*/
 .article-comments {
   display: block;
   padding-top: 20px;
