--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,3 +1,3 @@
-<a href="{% asset_path '{{ include.path-detail }}' %}" class="fluidbox-trigger">
+<a href="{% asset_path '{{ include.path-detail }}' %}">
   <img src="{% asset_path '{{ include.path }}' %}" alt="{{ include.alt }}" />
 </a>
