--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,7 +10,7 @@
         <article class="projectinfo">
           <h1>{{ page.title }}</h1>
           <hr>
-          <h3>Client: {{ page.client }}</h3>
+          <h5 style="color:#b9b9b9; margin-bottom:1em;">Client: {{ page.client }}</h5>
           <h5>Brief</h5>
           <p>{{ page.brief }} </p>
           <h5>Research</h5>
