--- a/_assets/stylesheets/modules/_about.scss
+++ b/_assets/stylesheets/modules/_about.scss
@@ -2,9 +2,10 @@
 // About
 // =============================================================================
 
-.about {
+/* .about {
   padding: 100px 0;
   h1 {
     margin: 50px 0 15px;
   }
 }
+*/
