--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <title>{{ site.name }} | {{ page.title }}</title>
   <meta name="description" content="{{ page.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="ClMV3EaPmg270PHuFGygXYZXB6zNYOok7-qSbvTjrCE">
+  <meta name="google-site-verification" content="ClMV3EaPmg270PHuFGygXYZXB6zNYOok7-qSbvTjrCE" />
   <script async="" src="//www.google-analytics.com/analytics.js"></script>
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
@@ -23,6 +23,17 @@
 
   <script src="https://use.typekit.net/red7ojk.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-50379826-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 
   {% if site.blog_theme == "light" %}
     {% stylesheet light %}
