--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
       <div class="grid-cell">
         <article class="article reveal">
           <span class="article-header">
-            <h1>{{ page.title }}</h1>
+            <span class="introtext">{{ page.title }}</span>
            <!-- <p>{{ page.description }}</p> -->
             <div class="article-list-footer">
               <span class="article-list-date">
