--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -55,7 +55,7 @@ $font-family-serif: 'jaf-lapture', serif;
 $font-family-sans: 'neuzeit-grotesk',sans-serif;
 $light:300;
 $regular:400;
-$maxwidth-desktop:64em;
+$maxwidth-desktop:40em;
 
 
 
@@ -68,9 +68,9 @@ $maxwidth-desktop:64em;
 
 
 body {
-  @include outer-container(100%);
+  margin:0 auto;
+  width:$maxwidth-desktop;
   background-color: $backgroundc;
-  margin-top: 0em;
   color:$maincolor;
   font-family: $font-family-sans;
   font-size: ms(0);
@@ -165,8 +165,8 @@ header {
 
 #logo {
 
-  @include span-columns(4);
-  font-size: ms(0);
+  @include span-columns(6);
+  font-size: ms(-1);
   @include media($small) { // As defined in _grid-settings.scss
     @include span-columns(12);
     text-align: left;
@@ -217,7 +217,7 @@ nav {
   font-size: ms(0);
   color:black;
   text-align: right;
-  @include span-columns(8);
+  @include span-columns(6);
   @include media($small) { // As defined in _grid-settings.scss
     @include span-columns(12);
     margin-top: .5em;
@@ -681,18 +681,31 @@ footer a {
 
 /* =============== TYPOGRAPHY =============== */
 
+.large-p {
+  margin-bottom: .5em;
+  font-size:ms(3);
+  line-height: 1.25em;
+
+}
+
+
+
+header {
+  border-bottom: 1px solid;
+  margin-bottom: 1em;
+}
+
 header p {
   text-align: center;
   font-size:.6em;
 }
 
 h1 {
-  font-family: $font-family-sans;
-  font-size: ms(1);
+  font-family: $font-family-serif;
+  margin-bottom: .25em;
+  font-size: ms(5);
   font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  box-shadow: inset 0 -8px 0 #eeeaec;
+  // box-shadow: inset 0 -8px 0 #eeeaec;
 }
 
 h2 {
@@ -748,7 +761,6 @@ h5 {
 /* BLOG */
 
 .grid-centered {
-  @include outer-container(45%);
   @include media($small) { // As defined in _grid-settings.scss
     @include outer-container(80%);
   }
