everything is working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <hr>
 
-  <p> Christian Solorzano 2017<br>No animals were harmed in the making of this website.</p>
+  <p> © Christian Solorzano 2018<br>Work Hard.</p>
   <p><a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank">LinkedIn</a>  |             <a href="https://www.instagram.com/xnslrzn/" target="_blank">Instagram</a>      |        <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
 
 
