--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -43,15 +43,15 @@ $max-width: em(62.5em) !default;
 /* =============== VARIABLES =============== */
 
 
-$backgroundc: #ffffff;
-$lightcolor: #c0bcbe;
+$backgroundc: #f6f7f5;
+$lightcolor: #3d3a59;
 $midcolor: #636363;
-$maincolor: #1a1a1a;
-$accent: #ff3c79;
+$maincolor: #151e00;
+$accent: #3809e2;
 $max-width: em(400);
 $small: new-breakpoint(max-width 64em 12);
 $grid: new-breakpoint(max-width 40em 12);
-$font-family-serif: 'jaf-lapture', serif;
+$font-family-serif: 'ltc-kennerley', serif;
 $font-family-sans: 'neuzeit-grotesk',sans-serif;
 $light:300;
 $regular:400;
@@ -68,18 +68,23 @@ $maxwidth-desktop:40em;
 
 
 body {
+  padding: 2em 2em 2em 2em;
   margin:0 auto;
   width:$maxwidth-desktop;
   background-color: $backgroundc;
   color:$maincolor;
-  font-family: $font-family-sans;
-  font-size: ms(0);
+  font-family: $font-family-serif;
+  font-size: ms(1);
   /* @include linear-gradient(to top, #324146, #b7c4ff, #adffe4 ); */
   @include media($small) { // As defined in _grid-settings.scss
     @include outer-container(100%);
+    font-size: ms(0);
+
   }
   @include media($grid) { // As defined in _grid-settings.scss
     @include outer-container(100%);
+    font-size: ms(-1);
+
   }
 
 
@@ -87,7 +92,7 @@ body {
 /* Create a series of empty pseudo-elements... */
 html:before,html:after,body:before,body:after{
   content:"";
-  background:black;
+  background: #e1a2f5;
   position:fixed;
   display:block;
   z-index:1000;
@@ -151,13 +156,12 @@ header {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 2em 0 2em 0;
 
   @include media($small) { // As defined in _grid-settings.scss
-    @include outer-container(85%);
+    @include outer-container(100%);
   }
   @include media($grid) { // As defined in _grid-settings.scss
-    @include outer-container(85%);
+    @include outer-container(100%);
   }
 
 }
@@ -179,7 +183,7 @@ header {
 #logo a {
   vertical-align: text-bottom;
   font-family: $font-family-serif;
-  font-size: ms(1);
+  font-size: ms(2);
   font-weight:700;
   letter-spacing: 1px;
   -webkit-animation: color-change 5s infinite;
@@ -190,11 +194,11 @@ header {
 }
 
 @-webkit-keyframes color-change {
-  0% { color: #1d131c; }
+  0% { color: $maincolor; }
   25% { color: $accent; }
-  50% { color: #232636; }
+  50% { color: $maincolor; }
   75% { color: $accent; }
-  100% { color: #000000; }
+  100% { color: $maincolor; }
 }
 
 
@@ -209,7 +213,7 @@ a {
 
 
 a:hover {
-  color:black;
+  color: $midcolor;
 }
 
 
@@ -388,7 +392,7 @@ li.block img:hover {
   }
 }
 .introtext    {
-   @include ms-respond(font-size, 3);
+   font-size:ms(5);
    margin-bottom: 2em;
    font-family: $font-family-serif;
    font-weight:700;
@@ -478,7 +482,7 @@ li.block img:hover {
 .date {
   font-size:ms(-1);
   letter-spacing: 1px;
-  color:$lightcolor;
+  color:$accent;
 }
 
 .description {
@@ -517,7 +521,7 @@ li.block img:hover {
 
 .social p {
   margin-top: 1em;
-  font-size: ms(-1);
+  font-size: ms(0);
   color: $midcolor;
   margin-bottom: .75em;
 }
@@ -541,6 +545,11 @@ li.block img:hover {
 }
 
 /* =============== WORK =============== */
+
+.work-list-item {
+  list-style: none;
+}
+
 
 .worktext {
   width:$maxwidth-desktop;
@@ -569,7 +578,7 @@ li.block img:hover {
 }
 
 .projectinfo {
-  @include span-columns(8);
+  @include span-columns(12);
   @include media($small) { // As defined in _grid-settings.scss
     @include span-columns(12);
   }
@@ -580,7 +589,7 @@ li.block img:hover {
 
 .projecttype {
   color: $maincolor;
-  @include span-columns(4);
+  @include span-columns(12);
   @include omega();
   @include media($small) { // As defined in _grid-settings.scss
     @include span-columns(12);
@@ -660,10 +669,11 @@ figcaption {
 
 footer {
   @include span-columns(12);
-  padding: 2em;
-  text-align: center;
+  padding: 0em;
+  text-align: left;
   font-size:ms(1);
   line-height: 1em;
+  margin-bottom: 2em;
 
 }
 
@@ -682,17 +692,37 @@ footer a {
 /* =============== TYPOGRAPHY =============== */
 
 .large-p {
+  font-family: $font-family-serif;
   margin-bottom: .5em;
-  font-size:ms(3);
+  font-size:ms(2);
   line-height: 1.25em;
 
 }
 
+.article-list-date, .article-list-footer, h5 {
+  font-size: ms(-2);
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.article-list-footer span {
+  color:$maincolor;
+}
+
+.large-p a {
+  -webkit-animation: color-change 5s infinite;
+  -moz-animation: color-change 5s infinite;
+  -o-animation: color-change 5s infinite;
+  -ms-animation: color-change 5s infinite;
+  animation: color-change 5s infinite;
+//color: $accent;
+  font-weight: 600;
+}
 
 
 header {
-  border-bottom: 1px solid;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 header p {
@@ -703,13 +733,13 @@ header p {
 h1 {
   font-family: $font-family-serif;
   margin-bottom: .25em;
-  font-size: ms(5);
+  font-size: ms(4);
   font-weight: 600;
   // box-shadow: inset 0 -8px 0 #eeeaec;
 }
 
 h2 {
-  font-family: $font-family-sans;
+  font-family: $font-family-serif;
   font-size: ms(3);
   font-weight: 600;
   margin-top: 1em;
@@ -726,22 +756,14 @@ h3 {
 }
 
 h4 {
-  font-family: $font-family-sans;
+  font-family: $font-family-serif;
   font-size: ms(1);
-  font-weight: 400;
+  font-weight: 700;
   margin-top: 1em;
 
 }
 
-h5 {
-  font-family: $font-family-sans;
-  font-size: ms(-2);
-  font-weight: 600;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  margin-top: .25em;
 
-}
 
 
 
@@ -803,7 +825,7 @@ h5 {
 }
 
 .article-list-item {
-  font-size:ms(-1);
+  font-size:ms(-2);
 
 }
 
@@ -813,7 +835,7 @@ h5 {
 
 
 .article {
-  margin:2.5em 0;
+  margin:0em;
   @include media($small) { // As defined in _grid-settings.scss
     margin:0;
   }
@@ -863,6 +885,8 @@ h5 {
 
 .article-content p {
   margin-bottom: 2em;
+  font-size: ms(2);
+  line-height:ms(3);
 }
 
 .article-content img {
