--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,19 +1,22 @@
+
+
 <header>
   <div id="logo">
     <a href="{{ '/' | relative_url }}" div="logo" title="{{ site.name }}">{{ site.name }}</a>
   </div>
-  <nav>
+    <!--
+   <nav>
     <ul>
       <li>
-        <a href="{{ '/about' | relative_url }}"#work>about</a>
-      </li>
-      <li>
-      <a href="{{ '/' | relative_url }}"#work>graphic design</a>
+       <a href="{{ '/work' | relative_url }}"#work>portfolio</a>
     </li>
       <li>
-      <a href="{{ 'posts' | relative_url }}" title="journal">journal</a>
+       <a href="{{ 'posts' | relative_url }}" title="journal">journal</a>
       </li>
 
     </ul>
   </nav>
+  -->
+
 </header>
+
