--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,15 +5,13 @@
 {% include navigation.html %}
 
   <main role="main">
-    <div class="grid grid-centered">
-      <div class="grid-cell">
         <article class="article reveal">
           <span class="article-header">
             <span class="introtext">{{ page.title }}</span>
            <!-- <p>{{ page.description }}</p> -->
             <div class="article-list-footer">
               <span class="article-list-date">
-                {{ page.date | date: "%B %-d, %Y" }}
+                {{ page.date | date: "%-m/%-d/%Y" }}
               </span>
               <span class="article-list-divider">-</span>
               <span class="article-list-minutes">
@@ -51,8 +49,6 @@
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
           {% endif %}
         </article>
-      </div>
-    </div>
   </main>
 {% include footer.html %}
   {% include javascripts.html %}
