updated header and footer

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,11 +4,14 @@
   <div id="logo">
     <a href="{{ '/' | relative_url }}" div="logo" title="{{ site.name }}">{{ site.name }}</a>
   </div>
-    <!--
+
    <nav>
     <ul>
+        <li>
+            <a href="{{ '/about' | relative_url }}"#work>about</a>
+        </li>
       <li>
-       <a href="{{ '/work' | relative_url }}"#work>portfolio</a>
+       <a href="{{ '/work' | relative_url }}"#work>work</a>
     </li>
       <li>
        <a href="{{ 'posts' | relative_url }}" title="journal">journal</a>
@@ -16,7 +19,7 @@
 
     </ul>
   </nav>
-  -->
+
 
 </header>
 
