--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,12 @@
 <footer>
   <hr>
 
-  <p> © Christian Solorzano 2018<br>Work Hard.</p>
+  <p> © Christian Solorzano 2019<br>
   <p><a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank">LinkedIn</a>  |             <a href="https://www.instagram.com/xnslrzn/" target="_blank">Instagram</a>      |        <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
 
 
   </p>
-
+  <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
+  <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
+  <p>Typeface used is <a href="https://typekit.com/fonts/jaf-lapture">JAF Lapture</a> provided by TypeKit.</p>
 </footer>
