--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -62,6 +62,17 @@ $maxwidth-desktop:40em;
 
 /* =============== BODY =============== */
 
+.body-list {
+  padding: 0em;
+}
+
+.body-list li, .body-list ul, .body-list  {
+  list-style: none;
+  font-size:ms(1);
+  margin-top: 1em;
+
+}
+
 .hideme {
   opacity:0;
 }
@@ -226,7 +237,7 @@ nav {
     @include span-columns(12);
     margin-top: .5em;
     text-align: left;
-    font-size: ms(-1);
+    font-size: ms(0);
 
   }
 
@@ -353,6 +364,10 @@ li.block img:hover {
   margin-bottom: 3em;
 }
 
+#about-top img {
+  width: 100%;
+}
+
 .introleft    {
   @include span-columns(6);
   @include media($grid) {
@@ -392,7 +407,7 @@ li.block img:hover {
   }
 }
 .introtext    {
-   font-size:ms(5);
+   font-size:ms(3);
    margin-bottom: 2em;
    font-family: $font-family-serif;
    font-weight:700;
@@ -436,7 +451,7 @@ li.block img:hover {
 }
 
 .aboutsection {
-  @include span-columns(3);
+  @include span-columns(6);
   font-size: ms(0);
   border-top: 1px solid black;
   @include media($small) { // As defined in _grid-settings.scss
@@ -668,9 +683,9 @@ figcaption {
 
 
 footer {
+  text-align: center;
   @include span-columns(12);
   padding: 0em;
-  text-align: left;
   font-size:ms(1);
   line-height: 1em;
   margin-bottom: 2em;
@@ -825,7 +840,7 @@ h4 {
 }
 
 .article-list-item {
-  font-size:ms(-2);
+  font-size:ms(-1);
 
 }
 
