new navigation with emojis

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,13 +8,19 @@
    <nav>
     <ul>
         <li>
-            <a href="{{ '/about' | relative_url }}"#work>about</a>
+            <a href="{{ '/about' | relative_url }}"#work>😇</a>
         </li>
       <li>
-       <a href="{{ '/work' | relative_url }}"#work>work</a>
+       <a href="{{ '/work' | relative_url }}"#work>🔨</a>
     </li>
+        <li>
+            <a href="{{ '/photography' | relative_url }}"#photographyy>📷</a>
+        </li>
+        <li>
+            <a href="{{ '/play' | relative_url }}"#play>🎨</a>
+        </li>
       <li>
-       <a href="{{ 'posts' | relative_url }}" title="journal">journal</a>
+       <a href="{{ 'posts' | relative_url }}" title="#writing">✍️</a>
       </li>
 
     </ul>
