--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,5 +8,5 @@
   </p>
   <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
   <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
-  <p>Typeface used is <a href="https://typekit.com/fonts/jaf-lapture">JAF Lapture</a> provided by TypeKit.</p>
+  <p>Typefaces used are <a href="https://typekit.com/fonts/jaf-lapture" target="_blank">JAF Lapture</a> and <a href="https://fonts.adobe.com/fonts/acumin" target="_blank">Acumin</a> provided by TypeKit.</p>
 </footer>
