--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -47,7 +47,7 @@ $backgroundc: #ffffff;
 $lightcolor: #3d3a59;
 $midcolor: #636363;
 $maincolor: #151e00;
-$accent: #639c8f;
+$accent: #3e619c;
 $max-width: em(400);
 $small: new-breakpoint(max-width 64em 12);
 $grid: new-breakpoint(max-width 40em 12);
@@ -70,7 +70,7 @@ $maxwidth-desktop:40em;
   list-style: none;
   font-size:ms(0);
   margin-top: 1em;
-  line-height: 1em;
+  line-height: 1.5em;
 
 }
 
@@ -375,6 +375,7 @@ li.block img:hover {
 }
 
 #about-top img {
+  margin-top: 2em;
   width: 100%;
 }
 
@@ -747,7 +748,7 @@ footer a {
 
 
 header {
-  margin-bottom: 4em;
+  margin-bottom: 2.5em;
 }
 
 header p {
@@ -756,10 +757,12 @@ header p {
 }
 
 h1 {
+  color: $accent;
   font-family: $font-family-serif;
   margin: 1em;
   font-size: ms(4);
   font-weight: 600;
+  line-height:1.25em;
   // box-shadow: inset 0 -8px 0 #eeeaec;
 }
 
@@ -907,6 +910,9 @@ h4 {
 
 .article-content a {
   vertical-align: inherit;
+  color:$accent;
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 .article-content p {
