--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,18 @@
   <hr>
 
   <p> © Christian Solorzano 2019<br>
-  <p><a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank">LinkedIn</a>  |             <a href="https://www.instagram.com/xnslrzn/" target="_blank">Instagram</a>      |        <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
+
+
+
+    <a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    |
+    <a href="https://www.twitter.com/xnslrzn/" target="_blank"><i class="fab fa-twitter"></i></a> <br>
 
 
   </p>
+  <!--
   <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
   <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
   <p>Typefaces used are <a href="https://typekit.com/fonts/jaf-lapture" target="_blank">JAF Lapture</a> and <a href="https://fonts.adobe.com/fonts/acumin" target="_blank">Acumin</a> provided by TypeKit.</p>
+  -->
 </footer>
