--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,11 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="https://use.typekit.net/red7ojk.css">
+  <script src="https://kit.fontawesome.com/5f8b7ad646.js"></script>
+
+
+
 
 
 
