--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,17 +8,19 @@
    <nav>
     <ul>
       <li>
-       <a href="{{ '/work' | relative_url }}"#work>🔨</a>
+       <a href="{{ '/work' | relative_url }}"#work>bio</a>
     </li>
         <li>
-            <a href="{{ '/photography' | relative_url }}"#photographyy>📷</a>
+            <a href="{{ '/photography' | relative_url }}"#photographyy>photographs</a>
         </li>
+        <!--
         <li>
-            <a href="{{ '/play' | relative_url }}"#play>🎨</a>
+            <a href="{{ '/play' | relative_url }}"#play> work </a>
         </li>
       <li>
        <a href="{{ 'posts' | relative_url }}" title="#writing">✍️</a>
       </li>
+      -->
 
     </ul>
   </nav>
